--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "3.4.1",
+    "react-search-box": "^2.0.2",
     "reactstrap": "6.5.0"
   },
   "scripts": {
