--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-cookie": "3.0.4",
     "react-dom": "^16.13.1",
+    "react-js-pagination": "^3.0.3",
     "react-router-dom": "4.3.1",
     "react-scripts": "3.4.1",
     "react-search-box": "^2.0.2",
