--- a/app/package.json
+++ b/app/package.json
@@ -7,14 +7,17 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "4.1.3",
+    "css-loader": "^3.6.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-autosuggest": "^10.0.2",
     "react-cookie": "3.0.4",
     "react-dom": "^16.13.1",
     "react-js-pagination": "^3.0.3",
     "react-router-dom": "4.3.1",
     "react-scripts": "3.4.1",
-    "react-search-box": "^2.0.2",
-    "reactstrap": "6.5.0"
+    "reactstrap": "6.5.0",
+    "style-loader": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
