--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,8 @@
     "react-cookie": "3.0.4",
     "react-dom": "^16.13.1",
     "react-js-pagination": "^3.0.3",
-    "react-router-dom": "4.3.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "reactstrap": "6.5.0",
     "style-loader": "^1.2.1"
