--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>nextdestination</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>nextdestination</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Travel Planning Website</description>
 
 	<properties>
 		<java.version>1.8</java.version>
