--- a/app/package.json
+++ b/app/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "4.1.3",
     "css-loader": "^3.6.0",
+    "google-map-react": "^1.1.7",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-autosuggest": "^10.0.2",
     "react-cookie": "3.0.4",
     "react-dom": "^16.13.1",
+    "react-google-maps": "^9.4.5",
     "react-js-pagination": "^3.0.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
