--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "4.1.3",
     "css-loader": "^3.6.0",
-    "google-map-react": "^1.1.7",
+    "google-maps-react": "^2.0.6",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-autosuggest": "^10.0.2",
