--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-js-pagination": "^3.0.3",
+    "react-places-autocomplete": "^7.3.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
